# news-cli

./: Cargo.toml  feed.rss
src/: config.rs  history.rs  main.rs  open_url.rs  stats.rs  ui.rs
src/news/: fetch.rs  mod.rs  model.rs
src/util/: sanitize.rs
